mobile overflow-x fix

--- a/index.css
+++ b/index.css
@@ -122,6 +122,7 @@ h1 {
 
 .menu.mobile {
     height: 12vw;
+    width: 100%;
 }
 
     .menu.mobile a {
@@ -393,6 +394,7 @@ h1 {
     background-image: url(/static/art/backgroundstars.jpg);
     background-repeat: no-repeat;
     background-size:cover;
+    overflow-x: hidden;
 
 }
 
@@ -716,7 +718,7 @@ h1 {
     }
 
     body {
-        background-color: rgb(255, 213, 241);
+        background-color: rgb(14, 5, 54);
         overflow-x: hidden;
     }
 }
